[package]
name = "fireboard2mqtt"
version = "3.1.3"
edition = "2021"
publish = false

[features]
default = []
pretty_print_json_logs = []

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
url = "2.5"
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1" }
rumqttc = "0.24"
bytes = "1"
memory-stats = "1"
human_bytes = { version = "0.4", default-features = false }
serde_repr = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["default-tls", "charset", "macos-system-configuration", "json"] }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "serde",
    "clock"
]}
twelf = { version = "0.15", default-features = false, features = ["env", "default_trait"]}
strum = { version = "0.26", features = ["derive"] }
compact_str = { version = "0.8.0", features = ["serde", "bytes", "smallvec"] }
# rkyv = "0.8.8"

[profile.dev]
debug = true
opt-level = 0
lto = "off"
panic = "unwind"
strip = false

[profile.release]
debug = 0
strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
